# ChefApi_operations

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  db.sqlite3  docker-compose.yaml  file  manage.py
.github/workflow/: ci.yaml  linter.yaml
.github/workflows/: CI.yml  linter.yml
CyberKnight/: asgi.py  settings.py  urls.py  wsgi.py
backend/: Cargo.toml
backend/src/: config.rs  main.rs  routes.rs
ciphers/: Cargo.toml  Dockerfile
ciphers/src/: error.rs  lib.rs  macros.rs  main.rs  traits.rs  utils.rs
ciphers/src/libs/: affine_trait.rs  base64.rs  bitwise_op.rs  ciphers.rs  mod.rs  vigenere_trait.rs
ciphers/src/operations/: a1z26_cipher_encode_mod.rs  a1z26cipher_decode_mod.rs  a1z26cipher_encode_mod.rs  adler32_checksum_mod.rs  affine_cipher_decode_mod.rs  affine_cipher_encode_mod.rs  analyse_hash_mod.rs  argon2_compare_mod.rs  argon2_mod.rs  atbash_cipher_encode_mod.rs  atbash_cipher_mod.rs  bcrypt.rs  bcrypt_compare_mod.rs  bcrypt_mod.rs  bcrypt_parse_mod.rs  bifid_cipher_encode_mod.rs  blake2b_mod.rs  blake2s_mod.rs  from_base64_mod.rs  hmac.rs  md2_mod.rs  md4_mod.rs  md5_mod.rs  mod.rs  rsa_decode_mod.rs  rsa_encode_mod.rs  sha2_mod.rs  sha3_mod.rs  to_base64_mod.rs  to_base_mod.rs  vigenere_cipher_decode_mod.rs  vigenere_cipher_encode_mod.rs
ciphers/src/operations/ciphers/: a1z26_cipher_decode_mod.rs
ciphers/src/operations/crypto/: mod.rs
ciphers/src/operations/default/: from_base64_mod.rs  mod.rs  to_base64_mod.rs  to_base_mod.rs
ciphers/src/operations/hashing/: analyse_hash_mod.rs  sha2_mod.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  macros.rs  traits.rs  utils.rs
common/src/libs/: affine_trait.rs  mod.rs  vigenere_trait.rs
common/src/operations/: a1z26cipher_decode_mod.rs  a1z26cipher_encode_mod.rs  affine_cipher_decode_mod.rs  affine_cipher_encode_mod.rs  from_base64_mod.rs  to_base64_mod.rs  vigenere_cipher_decode_mod.rs  vigenere_cipher_encode_mod.rs
crypto/: Cargo.toml  Dockerfile
crypto/src/: main.rs
crypto/src/operations/: adler32_checksum_mod.rs  hmac_mod.rs  mod.rs
default/: Cargo.toml  Dockerfile
default/src/: main.rs
default/src/operations/: from_base64_mod.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: lib.rs  main.rs
frontend/src/components/: banner.rs  mod.rs  operations.rs
frontend/styles/: tailwind.css
hashing/: .dockerignore  Cargo.toml  Dockerfile
hashing/src/: main.rs
hashing/src/operations/: blake2b_mod.rs  md2_mod.rs  md4_mod.rs  md5_mod.rs  mod.rs  sha1_mod.rs  sha2_mod.rs  sha3_mod.rs
src/: config.rs  lib.rs  main.rs  routes.rs  utils.rs
src/api/: error.rs  macros.rs  mod.rs  utils.rs
src/api/lib/: AffineTrait.rs  Base64.rs  LanguageTrait.rs  VigenereTrait.rs  mod.rs
src/api/operations/: A1Z26CipherDecode.rs  A1Z26CipherDecode_mod.rs  A1Z26CipherEncode_mod.rs  AffineCipherDecode_mod.rs  AffineCipherEncode_mod.rs  FromBase64_mod.rs  ToBase64_mod.rs  VigenereCipherDecode_mod.rs  VigenereCipherEncode_mod.rs  VigenereDecode_mod.rs  VigenereEncode_mod.rs  error.rs  mod.rs
src/libs/: bacon.rs  base64.rs  mod.rs
src/operations/: a1z26_cipher_decode_mod.rs  a1z26_cipher_encode_mod.rs  add_line_numbers_mod.rs  adler32_checksum_mod.rs  affine_cipher_decode_mod.rs  affine_cipher_encode_mod.rs  analyse_hash_mod.rs  and_mod.rs  argon2_compare_mod.rs  argon2_mod.rs  atbash_cipher_mod.rs  bacon_cipher_encode_mod.rs  bcrypt_compare_mod.rs  bcrypt_mod.rs  bcrypt_parse_mod.rs  bifid_cipher_encode_mod.rs  blake2b_mod.rs  blake2s_mod.rs  filter_mod.rs  from_base64_mod.rs  from_base_mod.rs  hmac_mod.rs  md2_mod.rs  md4_mod.rs  md5_mod.rs  mod.rs  reverse_mod.rs  rsa_decrypt_mod.rs  rsa_encrypt_mod.rs  sha1_mod.rs  sha2_mod.rs  sha3_mod.rs  to_base64_mod.rs  to_base_mod.rs  vigenere_cipher_decode_mod.rs  vigenere_cipher_encode_mod.rs
utils/: Cargo.toml
utils/src/: lib.rs  traits.rs
utils/src/operations/: mod.rs
utils/src/operations/ciphers/: affine_cipher_encode_mod.rs  bifid_cipher_encode_mod.rs  mod.rs  vigenere_cipher_decode_mod.rs
utils/src/operations/crypto/: argon2_mod.rs  mod.rs
utils/src/operations/default/: from_base_mod.rs  mod.rs  to_base64_mod.rs
utils/src/operations/hashing/: mod.rs  sha1_mod.rs
