[package]
name = "cyber_knight"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
strum = { version = "0.25.0", features = ["derive"] }
env_logger = "0.10.0"

ciphers = { path = "ciphers" }

[workspace]
members = [
#    "frontend",
    "ciphers"
]

[profile.release]
opt-level = "s"
