[package]
name = "chef_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
env_logger = "0.10.0"

ciphers = { path = "ciphers" }

[workspace]
members = [
    "ciphers"
]

[profile.release]
codegen-units = 1
lto = true
