[package]
name = "chef_api_operations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bcrypt = "0.15.0"
blake2 = "0.9.1"
digest = { version = "0.10.7", features = ["mac"] }
md-5 = "0.10.5"
md2 =  "0.10.2"
md4 = "0.10.2"
num = "0.4.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
itertools = "0.11.0"
rsa = "0.9.2"
rand = "0.8.5"
regex = "1.9.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
rust-argon2 = "1.0.1"
hmac = "0.12.1"
ripemd = "0.1.3"
whirlpool = "0.10.4"
utils = { git = "https://github.com/TheGodfatherru/ChefApi_operations_utils.git", version = "0.1.0" }

[profile.release]
strip = true
lto = true
codegen-units = 1
