[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ciphers = { path = "../ciphers" }

actix-cors = "0.6.4"
actix-web = "4.3.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
