[package]
name = "ciphers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
itertools = "0.11.0"
num = "0.4.1"
rand = "0.8.5"
regex = "1.9.3"
rsa = "0.9.2"
rust-argon2 = "1.0.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
unicode-segmentation = "1.10.1"

[dev-dependencies]
proptest = "1.2.0"
reqwest = "0.11.18"
