[package]
name = "ciphers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "chef_api_ciphers"
path = "src/main.rs"

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
regex = "1.9.3"
rsa = "0.9.2"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"

utils = { git = "https://github.com/TheGodfatherru/ChefApi_utils.git", branch = "master"}

