[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0.1"
bcrypt = "0.15.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
utils = { path = "../utils" }
