[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chef_api_crypto"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
rust-argon2 = "1.0.1"
bcrypt = "0.15.0"
md-5 = "0.10.5"
md2 = "0.10.2"
md4 = "0.10.2"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
hmac = "0.12.1"
ripemd = "0.1.3"
sha1 = "0.10.5"
sha2 = "0.10.7"
whirlpool = "0.10.4"

utils = { git = "https://github.com/TheGodfatherru/ChefApi_utils.git", branch = "master"}

[profile.release]
strip = true
lto = true
codegen-units = 1