[package]
name = "default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
utils = { version = "0.1.0", path = "../utils" }
