[package]
name = "default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chef_api_default"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
num = "0.4.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

utils = { git = "https://github.com/TheGodfatherru/ChefApi_utils.git", branch = "master"}

[profile.release]
strip = true
lto = true
codegen-units = 1