[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
ciphers = { path = "../ciphers" }

yew = { version = "0.20.0", features = ["csr"] }
serde_json = "1.0.104"
serde = { version = "1.0.178", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "js"] }
reqwasm = "0.5.0"
gloo = "0.9.0"
yewdux = "0.9.3"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Window"] }
wasm-bindgen-futures = "0.4.37"
