[package]
name = "hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.1"
md-5 = "0.10.5"
md2 = "0.10.2"
md4 = "0.10.2"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

utils = { path = "../utils" }
