[package]
name = "hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chef_api_hashing"
path = "src/main.rs"


[dependencies]
blake2 = "0.9.1"
digest = { version = "0.10.7", features = ["mac"] }
md-5 = "0.10.5"
md2 =  "0.10.2"
md4 = "0.10.2"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"

utils = { git = "https://github.com/TheGodfatherru/ChefApi_utils.git", branch = "master"}
